视频内容用js延迟加载

--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ input, textarea {
   -webkit-border-radius: 0;
 	border-radius: 0; 
 }
+.hide {
+	display: none;
+}
 .center {
 	text-align: center;
 }
