--- a/yangpijuan/style/player.css
+++ b/yangpijuan/style/player.css
@@ -171,8 +171,8 @@ body {
 	text-align:center;
 	width:500px;
 	font-size: 22px;
-	color: #fff;
-	text-shadow: 0 1px 3px rgba(0,0,0,0.3);
+	color: #000;
+	text-shadow: 0 1px 3px rgba(0,0,0,0.1);
 	margin: 130px auto 0 auto;
 }
 
