--- a/yangpijuan/style/player.css
+++ b/yangpijuan/style/player.css
@@ -4,48 +4,31 @@ body {
 }
 
 .jp-audio {
-	width: 558px;
-	height: 87px;
-	top: 0;
-	position: fixed;
-	right: -478px;
-	z-index: 2;
-	background: url(../images/ico_bg.png) no-repeat -358px 0;
+
 }
 
 
 .jp-interface {
-    height: 87px;
-    position: relative;
-    width: 558px;
-}
 
-.jp-controls {
-	list-style-type:none;
-	margin:0;
-	padding: 0;
-	overflow:hidden;
-	width: 558px;
-	height: 87px;
-}
-
-.jp-controls li {
-	display:inline;
-	float: left;
 }
 
 .jp-controls a {
-	display:block;
 	overflow:hidden;
 	text-indent:-9999px;
 }
 
+.jp-controls {
+	margin-top: 100px;
+	text-align: center;
+}
+
 .jp-play,
 .jp-pause {
+	display: inline-block;
 	width:61px;
 	height:61px;
-	margin: 11px 0 0 13px;
 	outline: none;
+	text-indent: -9999px;
 }
 
 .jp-play {
@@ -54,67 +37,35 @@ body {
 
 .jp-pause {
 	background: url(../images/ico_bg.png) no-repeat -726px -87px;
-	display: none;
 }
 
 .jp-mute,
 .jp-unmute,
 .jp-volume-max {
-	width:18px;
-	height:15px;
-	margin-top:57px;
-}
-
-.jp-mute,
-.jp-unmute {
-	margin-left: 170px;	
-}
-
-.jp-volume-max {
-	margin-left: 85px;	
-}
-
-.jp-mute {
-	background: url(../images/ico_bg.png) -787px -87px no-repeat;
-}
-.jp-mute:hover {
-	background: url(../images/ico_bg.png) -787px -102px no-repeat;
-}
-.jp-unmute {
-	background: url(../images/ico_bg.png) -823px -87px no-repeat;
 	display: none;
-}
-.jp-unmute:hover {
-	background: url(../images/ico_bg.png) -823px -102px no-repeat;
-}
-.jp-volume-max {
-	background: url(../images/ico_bg.png) -805px -87px no-repeat;
-}
-.jp-volume-max:hover {
-	background: url(../images/ico_bg.png) -805px -102px no-repeat;
 }
 
 
 .jp-progress {
-	overflow:hidden;
-	position: absolute;
-	top: 35px;
-	left: 100px;
-	height:15px;
-	width:405px;
-	background: url(../images/ico_bg.png) no-repeat -358px -159px;
+	width: 100%;
+	height: 5px;
+	position: fixed;
+	bottom: 0;
+	left: 0;
 }
 
 .jp-seek-bar {
-	width:0px;
+	width:100%;
 	height:100%;
 	cursor: pointer;
+	background-color: rgba(0,0,0,0.3);
 }
 
 .jp-play-bar {
-	background: url(../images/ico_bg.png) no-repeat -358px -174px;
-	width:0px;
+	background-color: #32c6ff;
+	width:0;
 	height:100%;
+	border-radius: 1px;
 }
 
 .jp-volume-bar {
@@ -173,7 +124,7 @@ body {
 	font-size: 22px;
 	color: #000;
 	text-shadow: 0 1px 3px rgba(0,0,0,0.1);
-	margin: 130px auto 0 auto;
+	margin: 20px auto 0 auto;
 }
 
 #list_box {
