修改鼠标经过播放区ie7、8、9 hover事件不正确问题

--- a/yangpijuan/style/player.css
+++ b/yangpijuan/style/player.css
@@ -44,7 +44,7 @@ body {
 	cursor: default;
 	margin-top: 100px;
 	padding-left: 60px;
-
+	background: transparent url(../images/blank.gif) repeat 0 0;
 }
 
 .jp-controls a{
